--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,25 +22,22 @@
 # volumes:
 #   songs:
 
-version: '3.8'
+version: '3'
 services:
-  mongodb:
-    container_name: mongodb
-    image: mongo:latest
-    ports:
-      - "27018:27017"
-    volumes:
-      - mongodb_data:/data/db
-
-  nodejs:
-    container_name: nodejs
+  mongo:
+      image: mongo:latest
+      restart: always
+      volumes:
+        - songs:/data/db
+  app:
     build: .
     ports:
-      - "4000:4000"
+      - 4000:4000
+    environment:
+        MONGO_URI: mongodb://mongo:27017/songs_db
+        PORT: 4000
     depends_on:
-      - mongodb
-    links:
-      - mongodb
+      - mongo
+
 volumes:
-  mongodb_data:
-    driver: local
+  songs:
