--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,32 +1,10 @@
-# version: '3.8'
-
-# services:
-#   api:
-#     build: .
-#     ports:
-#       - 4000:4000
-#     environment:
-#       DB_URL: mongodb://db/songs
-#     volumes:
-#       - :/app
-#     depends_on:
-#       - db
-#     command: ./docker-entrypoint.sh
-#   db:
-#     image: mongo:latest
-#     ports:
-#       - 27017:27017
-#     volumes:
-#       - songs:/data/db
-
-# volumes:
-#   songs:
-
 version: '3'
 services:
   mongo:
       image: mongo:latest
       restart: always
+      ports:
+        - 27017:27017
       volumes:
         - songs:/data/db
   app:
